--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -6,6 +6,8 @@
     //Defaul layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --black: #000;
+    --text-color: #333;
 }
 
 * {
@@ -23,4 +25,16 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizespeed;
+}
+
+button,
+input,
+[tabindex] {
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
