--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -76,6 +76,10 @@
     color: rgba(22, 24, 35, 0.34);
 }
 
+.action {
+    display: flex;
+}
+
 .search-btn {
     width: var(--search-button-width);
     height: 100%;
@@ -93,3 +97,5 @@
         background-color: rgba(22, 24, 35, 0.06);
     }
 }
+
+
