--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -22,6 +22,17 @@
     }
 }
 
+.icon + .title,
+.title + .icon {
+    margin-left: 8px;
+}
+
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
+}
+
 // Button type
 .rounded {
     border-radius: 999px;
@@ -60,8 +71,6 @@
         text-decoration: underline;
     }
 }
-
-// Disable
 
 // Button size
 .small {
