--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -98,4 +98,14 @@
     }
 }
 
+.more-btn {
+    font-size: 2rem;
+    padding: 4px 8px;
+    margin-left: 26px;
+    background-color: transparent;
+}
 
+// Menu
+.menu-items {
+    width: 224px;
+}
