101. Xây dựng UI phần Header #5

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -13,6 +13,7 @@
 .inner {
     height: 100%;
     width: var(--default-layout-width);
+    padding: 0 var(--default-layout-horizontal-space);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -99,13 +100,9 @@
 }
 
 .more-btn {
+    cursor: pointer;
     font-size: 2rem;
     padding: 4px 8px;
     margin-left: 26px;
     background-color: transparent;
-}
-
-// Menu
-.menu-items {
-    width: 224px;
 }
